capstone: Add scrollbar to currently online user section of chatroom to avoid overflow as new users join

--- a/client/src/css/styles.scss
+++ b/client/src/css/styles.scss
@@ -124,7 +124,6 @@
     }
 
     /* MAIN CHAT ROOM */
-    
     .main__chatbox--container {
         width: 100%;
         height: 90%;
@@ -167,6 +166,8 @@
             .main__users-online-section {
                 width: 25%;
                 border-right: $border-chatroom;
+                overflow: scroll;
+                overflow-x: hidden;
 
                 @media(max-width: $mobile-max-width) {
                    width: 40%;
